backends/drm: fix check for ddc/ci software dimming

We applied dimming on top of the brightness factor, but the brightness factor
wasn't actually always applied.

BUG: 516867